<resources>
    <string name="app_name">Avia</string>
    <string name="label_menu" translatable="false">Меню</string>
    <string name="label_main" translatable="false">Протокол проверки работы двигателя АИ-25ТП и систем самолета</string>
    <string name="label_engine_number" translatable="false">Двигатель АИ-25ТЛ, заводской №</string>
    <string name="label_plane_number" translatable="false">Установлен на самолет Л-39С, бортовой №</string>
    <string name="label_wp" translatable="false">W/P No</string>
    <string name="label_date" translatable="false">Дата</string>
    <string name="label_atm_pressure" translatable="false">Pнв мм.рт.ст</string>
    <string name="label_atm_temp" translatable="false">Tнв ºС</string>
    <string name="label_KVD" translatable="false">Значение оборотов ротора КВД, определенных по графику рис.1 ИЭД (если в зоне переменных оборотов)</string>
    <string name="label_work_0nominal" translatable="false">0,85 Ном</string>
    <string name="label_work_nominal" translatable="false">Ном</string>
    <string name="label_work_max" translatable="false">Макс</string>
    <string name="label_limb" translatable="false">По лимбу</string>
    <string name="label_vsu_launching" translatable="false">Запуск ВСУ</string>
    <string name="label_engine_launching" translatable="false">Запуск двигателя</string>
    <string name="label_limb_arg" translatable="false">Арг. 400, α РУД</string>
    <string name="label_launching_t_vsu" translatable="false">t зап. ВСУ</string>
    <string name="label_engine_casting" translatable="false">T ºC двигателя заброс</string>
    <string name="label_vsu_disconnection" translatable="false">n1 отключения ВСУ</string>
    <string name="label_t_engine" translatable="false">t зап. двигателя</string>
    <string name="label_small_gas" translatable="false">Малый газ</string>
    <string name="label_title_small_gas" translatable="false">Прогрев двигателя и проверка параметров работы систем самолета</string>
    <string name="label_n1" translatable="false">n1</string>
    <string name="label_trc" translatable="false">Tr ºC</string>
    <string name="label_pm" translatable="false">Pm</string>
    <string name="label_tmc" translatable="false">Tm ºC</string>
    <string name="label_pt" translatable="false">Pt</string>
    <string name="label_engine_sqrt" translatable="false">√ двигателя</string>
    <string name="label_prc" translatable="false">Pr/c</string>
    <string name="label_main_system" translatable="false">Основная r/система</string>
    <string name="label_emergency" translatable="false">Аварийная при переключении крана Нп-66</string>
    <string name="label_ptorm" translatable="false">Pторм</string>
    <string name="label_basic" translatable="false">Основное</string>
    <string name="label_parking" translatable="false">Стояночное</string>
    <string name="label_v_generator" translatable="false">Vгенератора</string>
    <string name="label_pvozd" translatable="false">Pвозд</string>
    <string name="label_kr_tank" translatable="false">Крыл. баки</string>
    <string name="label_g_accum" translatable="false">Г/аккумулятор</string>
    <string name="label_g_tank" translatable="false">Г/бак</string>
    <string name="label_closing_lantern" translatable="false">Закрытие замков фонаря</string>
    <string name="label_air_cond" translatable="false">Включение кондиционирования кабины</string>
    <string name="label_p_cabin" translatable="false">ΔРкабины</string>
    <string name="label_turnover_kvd_v" translatable="false">Обороты КВД закрытия КПВ за V ступенью</string>
    <string name="label_straight_run" translatable="false">Прямой ход</string>
    <string name="label_n1_straight_run" translatable="false">n1 - Прямой ход</string>
    <string name="label_n1_85" translatable="false">n1 = 85%</string>
    <string name="label_flaps" translatable="false">Закрылки</string>
    <string name="label_brake" translatable="false">Тормоз</string>
    <string name="label_flight_takeoff" translatable="false">полет - взлет</string>
    <string name="label_takeoff_landing" translatable="false">взлет - посадка</string>
    <string name="label_flight_landing" translatable="false">полет - посадка</string>
    <string name="label_low_prc" translatable="false">↓ Pr/c</string>
    <string name="label_release" translatable="false">Выпуск</string>
    <string name="label_cleaning" translatable="false">Уборка</string>
    <string name="label_turnover_kvd_iii" translatable="false">Обороты КВД закрытия КПВ за III ступенью</string>
    <string name="label_n1_100" translatable="false">n1 = 100%</string>
    <string name="label_eng_measurement" translatable="false">Замер вибрации двигателя</string>
    <string name="label_nom" translatable="false">Ном.</string>
    <string name="label_working_capacity" translatable="false">Работноспособность агр. 4001</string>
    <string name="label_working_air_coond" translatable="false">Работоспособность системы кондиционирования</string>
    <string name="label_azs_pump" translatable="false">АЗС \"НАСОС\"</string>
    <string name="label_turn_on_dot" translatable="false">ВКЛ.</string>
    <string name="label_turn_off" translatable="false">ВЫКЛ.</string>
    <string name="label_switch_position" translatable="false">Положение переключателя</string>
    <string name="label_rtvk" translatable="false">РТВК +25ºС +10ºС</string>
    <string name="label_shower" translatable="false">ДУШ +25 ºС +10 ºС</string>
    <string name="label_max" translatable="false">Макс.</string>
    <string name="label_n2_4" translatable="false">n2 По графику с допуском ± 4%</string>
    <string name="label_voltage_regulator" translatable="false">Работоспособность регулятора напряжения</string>
    <string name="label_pvozd_kr_tank" translatable="false">Рвозд крыльевых баков</string>
    <string name="label_pt_preembossed" translatable="false">Рт передфорсунками</string>
    <string name="label_turnover_kvd_n" translatable="false">Обороты n1 КВД закрытия КПВ</string>
    <string name="label_back_stroke" translatable="false">Обратный ход</string>
    <string name="label_back_stroke_iii" translatable="false">Обратный ход III ст.</string>
    <string name="label_back_stroke_v" translatable="false">Обратный ход V ст.</string>
    <string name="label_iii" translatable="false">III ст.</string>
    <string name="label_v" translatable="false">V ст.</string>
    <string name="label_pick_up" translatable="false">Приемистость</string>
    <string name="label_exit_mg_max" translatable="false">Выход "МГ - МАКС."</string>
    <string name="label_reset_max_mg" translatable="false">Сброс "МАКС - МГ"</string>
    <string name="label_system_check" translatable="false">Проверка систем с-та и параметров работы двигателя</string>
    <string name="label_ppk_switch_min" translatable="false">ППК переключатель АД-6Е (мин.)</string>
    <string name="label_ppk_switch_max" translatable="false">ППК переключатель АД-6Е (макс.)</string>
    <string name="label_min" translatable="false">Мин.</string>
    <string name="label_air_conditioning" translatable="false">Кондиционер</string>
    <string name="label_anti_icing_agent" translatable="false">Антиоблединитель</string>
    <string name="label_control_knd" translatable="false">Контроль n0 КНД (приведенные)</string>
    <string name="label_pc_engine_install" translatable="false">±2% от установки двигателя на самолет</string>
    <string name="label_n_kvd" translatable="false">n квд %</string>
    <string name="label_n_kvd_phy" translatable="false">n квд физ %</string>
    <string name="label_n_knd_phy" translatable="false">n кнд физ %</string>
    <string name="label_n_knd_prived" translatable="false">n кнд привед %</string>
    <string name="label_n_knd_plane" translatable="false">n кнд при установке на самолёт %</string>
    <string name="label_dont_load_pump" translatable="false">Г/насос не загружать.</string>
    <string name="label_turn_off_generator" translatable="false">Генератор, кондиционер, антиобледенитель выключить.</string>
    <string name="label_system_check_pt12_9" translatable="false">Проверка системы РТ&#8211;12&#8211;9 2 серии</string>
    <string name="label_set_n1_80" translatable="false">Установить n1 =70±2%</string>
    <string name="label_set_mg" translatable="false">Установить МГ (или n1 близкий к МГ при проверке на аварийном топливе, но не ниже 56%), охладить не менее 2 мин.</string>
    <string name="label_system_check_pt12_9_w" translatable="false">Проверка системы РТ&#8211;12&#8211;9 2 серии (совместно со специалистами АиРЭО)</string>
    <string name="label_n1_70" translatable="false">n1=70+-2%</string>
    <string name="label_limitation" translatable="false">"ограничение"</string>
    <string name="label_n1_56" translatable="false">n1 ≥56%</string>
    <string name="label_engine_stop" translatable="false">"останов двигателя"</string>
    <string name="label_switch_position_pt_12_9" translatable="false">Положение переключателя РТ&#8211;12&#8211;9</string>
    <string name="label_control_1" translatable="false">"контроль 1"</string>
    <string name="label_control_2" translatable="false">"контроль 2"</string>
    <string name="label_takeoff_25" translatable="false">ВЗЛЕТ 25º</string>
    <string name="label_flight_0" translatable="false">ПОЛЕТ 0º</string>
    <string name="label_landing_44" translatable="false">посадка 44º</string>
    <string name="label_removed_0" translatable="false">Убраны 0º</string>
    <string name="label_avar_fuel" translatable="false">Авар. топливо - установить n1=70±2%; - вкл. "Авар.топл" - перевести РУД на Nom, проверить параметры</string>
    <string name="label_triggering_kpv" translatable="false">Срабатывание КПВ</string>
    <string name="label_n1_closing" translatable="false">n1 закрытия</string>
    <string name="label_n1_opening" translatable="false">n1 открытия</string>
    <string name="label_adm_graphic_2prc" translatable="false">По графику с допуском ±2%</string>
    <string name="label_runtime_of_rotors" translatable="false">Выбег роторов</string>
    <string name="label_board_generator" translatable="false">Загорание табло "ГЕНЕРАТОР"</string>
    <string name="label_rotor_vd" translatable="false">Ротор ВД</string>
    <string name="label_rotor_nd" translatable="false">Ротор НД</string>
    <string name="label_cold_engine" translatable="false">Охлаждение двигателя ≥ 2 мин. и выключить РУДом.</string>
    <string name="label_bigger_equal_20" translatable="false">≥ 20c</string>
    <string name="label_bigger_equal_25" translatable="false">≥ 25c</string>
    <string name="label_n1_lower54" translatable="false">На n1 &#60; 54,5%</string>
    <string name="label_working_hours" translatable="false">Время работы</string>
    <string name="label_number_of_starts" translatable="false">Количиство запусков</string>
    <string name="label_base_values" translatable="false">Базовые значения</string>
    <string name="label_base_values_2" translatable="false">Базовые значения 2</string>
    <string name="label_n1_equals_85" translatable="false">n1=85%</string>
    <string name="label_final_data" translatable="false">Финальные данные</string>
    <string name="yes" translatable="false">Да</string>
    <string name="no" translatable="false">Нет</string>
    <string name="label_show_values" translatable="false">Показать значения?</string>
    <string name="label_choose_steps" translatable="false">Выберите этапы, которые хотите изменить</string>
    <string name="enter" translatable="false">enter</string>
    <string name="button_next" translatable="false">Далее</string>
    <string name="button_back" translatable="false">Назад</string>
    <string name="label_total_engine_running_time">Total engine running time</string>
    <string name="label_engine_running_time_after_repair">Engine running time after repair</string>
    <string name="label_engine_resource">Engine resource</string>
    <string name="label_resource_balance">Resource balance</string>
</resources>