<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_show_values"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_choose_steps"/>

    <CheckBox android:id="@+id/checkbox_base_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_base_values"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_base_values_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_base_values_2"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_small_gas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_small_gas"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_turnover_kvd_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_turnover_kvd_v"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_n1_equals_85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_n1_equals_85"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_turnover_kvd_iii"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_turnover_kvd_iii"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_work_0nominal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_work_0nominal"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_nominal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nom"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_max"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_turnover_kvd_n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_turnover_kvd_n"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_pick_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_pick_up"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_small_gas_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_small_gas"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_control_knd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_control_knd"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_runtime_of_rotors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_runtime_of_rotors"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_board_generator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_board_generator"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_final_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_final_data"
        android:onClick="onCheckboxClicked"/>

    <Button
        android:id="@+id/LinearMenuRecordsNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"/>
</LinearLayout>
