<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/LinearLabelMain222"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_main"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="14dp"
            android:textSize="12pt"/>
        <TextView
            android:id="@+id/LinearDate222"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_date"
            android:padding="5dp"
            android:textSize="10pt"
            android:gravity="center"/>
        <TextView
            android:id="@+id/LinearEngineNumber222"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_engine_number"
            android:padding="5dp"
            android:textSize="10pt"
            android:gravity="center"/>
        <EditText
            android:id="@+id/LinearInpEngineNumber222"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="10pt"
            android:gravity="center" />
        <TextView
            android:id="@+id/LinearPlaneNumber222"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_plane_number"
            android:textSize="10pt"
            android:gravity="center"/>
        <EditText
            android:id="@+id/LinearInpPlaneNumber22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="10pt"
            android:gravity="center"/>
        <TextView
            android:id="@+id/LinearWP22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_wp"
            android:textSize="10pt"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/LinearButtonNext222"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:layout_gravity="end"
                android:text="@string/button_next"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>