<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/LinearLabelMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_main"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="14dp"
            android:textSize="12pt"/>
        <TextView
            android:id="@+id/LinearDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_date"
            android:padding="5dp"
            android:textSize="10pt"
            android:gravity="center"/>
        <TextView
            android:id="@+id/LinearEngineNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_engine_number"
            android:padding="5dp"
            android:textSize="10pt"
            android:gravity="center"/>
        <Spinner
            android:id="@+id/LinearLabelInpSpinnerEngineNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="10pt"
            android:gravity="center" />
        <TextView
            android:id="@+id/LinearPlaneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_plane_number"
            android:textSize="10pt"
            android:gravity="center"/>
        <EditText
            android:id="@+id/LinearInpPlaneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="10pt"
            android:gravity="center"/>
        <TextView
            android:id="@+id/LinearTotalEngineRunningTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_total_engine_running_time"
            android:textSize="10pt"
            android:gravity="center"/>
        <EditText
            android:id="@+id/LinearInpTotalEngineRunningTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="10pt"
            android:gravity="center"/>
        <TextView
            android:id="@+id/LinearEngineRunningTimeAfterRepair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_engine_running_time_after_repair"
            android:textSize="10pt"
            android:gravity="center"/>
        <EditText
            android:id="@+id/LinearInpEngineRunningTimeAfterRepair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="10pt"
            android:gravity="center"/>
        <TextView
            android:id="@+id/LinearEngineResource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_engine_resource"
            android:textSize="10pt"
            android:gravity="center"/>
        <EditText
            android:id="@+id/LinearInpEngineResource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="10pt"
            android:gravity="center"/>
        <TextView
            android:id="@+id/LinearResourceBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_resource_balance"
            android:textSize="10pt"
            android:gravity="center"/>
        <TextView
            android:id="@+id/LinearInpResourceBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="10pt"
            android:gravity="center"/>
        <TextView
            android:id="@+id/LinearWP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_wp"
            android:textSize="10pt"
            android:gravity="center"/>
        <EditText
            android:id="@+id/LinearInpWP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="10pt"
            android:gravity="center"/>
        <TextView
            android:id="@+id/LinearAtmPressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_atm_pressure"
            android:textSize="10pt"
            android:gravity="center"/>
        <EditText
            android:id="@+id/LinearInpAtmPressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="10pt"
            android:gravity="center"/>
        <TextView
            android:id="@+id/LinearAtmTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_atm_temp"
            android:textSize="10pt"
            android:gravity="center"/>
        <EditText
            android:id="@+id/LinearInpAtmTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="10pt"
            android:gravity="center"/>
        <TextView
            android:id="@+id/LinearSubTextKVD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_KVD"
            android:paddingTop="8dp"
            android:paddingBottom="10dp"
            android:textSize="12pt"
            android:gravity="center"/>
        <TextView
            android:id="@+id/LinearWork0Nominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_work_0nominal"
            android:textSize="10pt"
            android:gravity="center"/>
        <EditText
            android:id="@+id/LinearInpWork0Nominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter"
            android:inputType="numberDecimal"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="10pt"
            android:gravity="center"/>
        <TextView
            android:id="@+id/LinearWorkNominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_work_nominal"
            android:textSize="10pt"
            android:gravity="center"/>
        <EditText
            android:id="@+id/LinearInpWorkNominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter"
            android:inputType="numberDecimal"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="10pt"
            android:gravity="center"/>
        <TextView
            android:id="@+id/LinearWorkMax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_work_max"
            android:textSize="10pt"
            android:gravity="center"/>
        <EditText
            android:id="@+id/LinearInpWorkMax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter"
            android:inputType="numberDecimal"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="10pt"
            android:gravity="center" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/LinearButtonNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:layout_gravity="end"
                android:text="@string/button_next"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>