<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/LinearLabelMsx2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_system_check_pt12_9"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="14dp"
            android:textSize="12pt"/>
        <TextView
            android:id="@+id/LinearLabelStraightRunIII"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_back_stroke_iii"
            android:padding="5dp"
            android:textSize="10pt"
            android:gravity="center"/>
        <EditText
            android:id="@+id/LinearLabelInpN1StraightRunIII"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="10pt"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="5">
            <Button
                android:id="@+id/LinearButtonBackControlKND"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:layout_gravity="start"
                android:text="@string/button_back"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/LinearTextViewCenterControlKND"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="0sp"
                android:gravity="center"
                android:layout_weight="3"/>
            <Button
                android:id="@+id/LinearButtonNextControlKND"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:layout_gravity="end"
                android:text="@string/button_next"
                android:layout_weight="1"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>